# statcert

./: LICENSE  LICENSE.txt  README.md  pyproject.toml
statcert/: __init__.py  task_loop.py
statcert/cli/: __init__.py  inputs.py  main.py  options.py  outputs.py  summary.py
statcert/model/: __init__.py  certificate.py  constants.py  info.py  operation.py  record.py
statcert/operation/: __init__.py  asynchttp.py  ocsp.py
tests/: __init__.py  conftest.py  test_cli.py  test_model.py  test_op_integration.py
tests/end-to-end/: stat-test.sh
tests/files/certs/: bb.der  google.der  twitter.der
tests/files/inputs/: bot-5.csv  rand-5.csv  test.csv  test.txt  top-5.csv
tests/files/outputs/: stat-test.csv  stat-test.json  stat-test.txt
