[tool.poetry]
name = "statcert"
version = "0.0.3"
description = "Fetch information about domains and their TLS certificates."
authors = ["Kalil Cabral <kbcv@cesar.school>"]
license = "MIT"

[tool.poetry.scripts]
statcert = 'statcert.cli:main'

[tool.poetry.dependencies]
python = "^3.8"
aiohttp = "^3.8.1"
cryptography = "^36.0.1"
tqdm = "^4.62.3"
tranco = "^0.6"

[tool.poetry.dev-dependencies]
pdbpp = "^0.10.3"
autopep8 = "^1.6.0"
jupyter = "^1.0.0"
ipython = "^8.0.1"
pytest = "^7.0.0"
pytest-asyncio = "^0.17.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
